[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = reoner
version = 0.3.0
classifiers =
    Programming Language :: Python :: 3

[options]
packages=find:
include_package_data = True
install_requires=
  prompt-toolkit==1.0.14
  pydub==0.25.1
  pygments==2.11.2
  regex==2022.3.15; python_version >= '3.6'
  six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
  wcwidth==0.2.5

python_requires = >=3.9,<3.10

[options.entry_points]
console_scripts =
  reoner = reoner.cli.cli:main

[options.packages.find]
where=

